# Kagami

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.supervisor  Dockerfile.worker  README.md  worker.toml
crates/common/src/: lib.rs
crates/kagami-cli/: Cargo.toml
crates/kagami-cli/src/: main.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs  main.rs  persistence.rs
crates/supervisor/src/entity/: mod.rs  prelude.rs  replica.rs  worker.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs  sync.rs
kagami/: server.py
kagami/core/: supervisor.py
kagami/database/database_service/: worker.py
kagami/routes/: __init__.py  admin.py  deps.py
kagami_worker/core/: worker.py
webui/: app.js  index.html  styles.css
