[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = { version = "0.42" }
actix = "0.13"
actix-rt = "2"
actix-web = "4.11"
sled = "0.34"
clap = { version = "4", features = ["derive"] }
config = "0.14"
prometheus = "0.14.0"
anyhow = "1.0.98"
tracing-subscriber = "0.3.20"
uuid = {version = "1.17.0", features = ["v4"]}
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
