[package]
name = "kagami-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
kagami-worker = { package = "worker", path = "../worker" }
kagami-supervisor = { package = "supervisor", path = "../supervisor" }
tracing-subscriber.workspace = true
