[package]
name = "supervisor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix.workspace = true
actix-rt.workspace = true
anyhow.workspace = true
async-nats.workspace = true
common = { version = "0.1.0", path = "../common" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4.41"
bytes = "1.10.1"
actix-web = "4.11"
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
