[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
anyhow.workspace = true
async-nats.workspace = true
bytes = "1.10.1"
chrono = "0.4.41"
common = { version = "0.1.0", path = "../common" }
config.workspace = true
futures-util.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
